--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,7 +9,15 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-}
+  --accent-color: #FF0070;
+  --nav-button-color: #FF0070;
+  --frames-color: #FF0070;
+  --title-color: #FF0070;
+  --nav-button-hover: #ff007066;
+  --accent-text-color: #000028;
+  --header-title-color: #DB00FF;
+  --main-text-color: #F1B2CE;
+  --bg-image: url(../images/cover-image-dark.png);
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
