--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+*::after,
+*::before {
+  display: inline-block;
+}
+
 body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
