--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,45 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #FF8DCB;
+  --nav-button-color: #353430;
+  --frames-color: #353430;
+  --title-color: #353430;
+  --nav-button-hover: #FFF1F766;
+  --accent-text-color: #353430;
+  --header-title-color: #FFC2E6;
+  --main-text-color: #353430;
+  --bg-image: url(../images/cover-image-light.png);
 }
 
-.theme-light .page {
+@media (prefers-color-scheme: light) {
+  :root {
+    --accent-color: #FF8DCB;
+    --nav-button-color: #353430;
+    --frames-color: #353430;
+    --title-color: #353430;
+    --nav-button-hover: #FFF1F766;
+    --accent-text-color: #353430;
+    --header-title-color: #FFC2E6;
+    --main-text-color: #353430;
+    --bg-image: url(../images/cover-image-light.png);
+  }
+
+  .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+
+  }
+
+  .header__title {
+  `-webkit-text-stroke: initial;
+  `text-stroke: initial;
+  }
+
+  .header__theme-menu {
+  `color: #353430;
+  }
+
+  .header__pseudo {
+    display: none;
+  }
 }
