--- a/styles/style.css
+++ b/styles/style.css
@@ -156,6 +156,12 @@
   gap: var(--content-gap);
 }
 
+.content__list-subtitle {
+font-size: var(--main-font-size);
+font-weight: var(--normal-font-weight);
+line-height: var(--main-line-height);
+}
+
 .content__title {
   color: var(--title-color);
   font-size: var(--main-font-size);
