--- a/styles/dark.css
+++ b/styles/dark.css
@@ -7,5 +7,6 @@
   --accent-text-color: #000028;
   --header-title-color: #DB00FF;
   --main-text-color: #F1B2CE;
+  --bg-color: #000028;
   --bg-image: url(../images/cover-image-dark.png);
 }
