--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,6 +15,7 @@
   --main-text-color: #F1B2CE;
   --header-footer-margin: 40px;
   --main-gap: 50px;
+  --bg-color: #000028;
   --bg-image: url(../images/cover-image-dark.png);
   --main-padding: 10px;
   --content-gap: 20px;
