--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,8 @@
   justify-items: end;
   margin-block-end: var(--header-footer-margin);
   padding: var(--main-padding);
-  min-block-size: 100vb;
+  block-size: 100vb;
+  min-block-size: 668px;
 }
 
 .frames::before {
@@ -178,6 +179,11 @@
 
 .content__text {
   line-height: var(--main-line-height);
+  margin-block-end: var(--subtitle-margin);
+}
+
+.content__text:last-of-type {
+  margin-block-end: 0;
 }
 
 .content__list .content__subtitle {
@@ -220,7 +226,8 @@
   align-content: space-between;
   padding: var(--main-padding);
   text-shadow: 2px 0px var(--accent-color);
-  min-block-size: 100vb;
+  block-size: 100vb;
+  min-block-size: 668px;
 }
 
 .footer__span {
@@ -297,12 +304,28 @@
     grid-column: 2 / 4;
   }
 
+  .even .content__section {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
   .even .content__subsection {
     grid-column: span 1;
+  }
+
+  .even .content__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: var(--content-gap);
     grid-row: 2;
+    grid-column: span 3;
+  }
+
+  .even .content__subtitle {
+    margin-block-end: var(--subtitle-margin);
   }
 
   .content__list {
     grid-column: span 2;
+
   }
 }
